<resources>
    <string name="app_name">Compost Crossing</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="compost_article">Read Compost Article</string>
    <!--<string name="article_header"><u>Article of the day !!</u></string>-->
    <string name="article_header">Article of the day !!</string>
    <string name="article_page_button_text">Home Page</string>
    <string name="text_home_screen">Welcome! Are you a </string>
    <string name="remove">Remove</string>
    <string name="activeAds">Active Ads</string>
    <string name="residentHistory">Sales History</string>
    <string name="composterHistory">Purchase History</string>
    <string name="postANewAd">Post a New Ad</string>
    <string name="composterNearBy">See Nearby Composter</string>
    <string name="createANewAdToday">Create a new Ad Today</string>
    <string name="residentPastAds">Your Past Ads</string>
    <string name="residentNearByComposter">Nearby Composters</string>
    <string name="back">Back</string>
    <string name="createAd">Create Ad</string>
    <string name="createProfile">Create Profile</string>
    <string name="adDetails">Ad Details</string>
    <string name="acceptCompost">Accept Compost</string>
    <string name="title_activity_composter_list_view">ComposterListViewActivity</string>
    <string name="compostAds">Compost Ads</string>
    <string name="noAds">No Ads Found</string>
    <string name="myAds">My Ads</string>
    <string name="seeNearByAds">SEE NEAR BY ADS</string>
    <string name="seeAllAds">SEE ALL ADS</string>
    <string name="exitMessage">Please click BACK again to exit</string>
    <string name="selectCompostMessage">Select a Compost from the list</string>
    <string name="CompostAcceptedSuccessMsg">Compost Accepted Successfully</string>
    <string name="forgot_user_credentials">Forgot User Credentials?</string>
    <string name="composterViewTitle">Composter Dashboard</string>
    <string name="residentViewTitle">Resident Dashboard</string>
    <string name="emptyLoginDetailsMsg">Username or Password is not entered!</string>
    <string name="incorrectUserCredentialsMsg">Incorrect Password or User Name</string>
    <string name="completeFormMsg">Please fill the form completely</string>
    <string name="zipCodeInvalidMsg">Zipcode should comprise of at least 5 digits</string>
    <string name="minLengthUserNameMsg">Length of the username should be at least 3</string>
    <string name="minLengthPasswordMsg">Length of the password should be at least 3</string>
    <string name="EnableSmsPermMsg">Please enable SMS permissions for this app to receive notifications</string>
</resources>
