<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:weightSum="10"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="match_parent"
            android:text="@string/activeAds"
            android:background="@color/buttonBackground"
            android:textColor="@color/buttonText"
            android:gravity="center"
            android:textSize="18dp"
            />

        <Button
            android:id="@+id/btnResidentHistory"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:text="@string/residentHistory"
            android:background="@color/buttonBackground"
            android:textColor="@color/buttonText"
            android:gravity="center"
            android:textSize="18dp"
             />
    </LinearLayout>

    <ListView
        android:id="@+id/residentItemListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8.4"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textAppearance="?attr/textAppearanceListItem"
        />

    <TextView
        android:id="@+id/emptyAdListForResident"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:visibility="gone"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
        android:text="@string/createANewAdToday"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:weightSum="10"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp">

        <Button
            android:id="@+id/btnBackResidentListView"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:text="Back"
            android:onClick="back"
            android:background="@color/buttonBackground"
            android:textColor="@color/buttonText"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="2dp"
             />

        <Button
            android:id="@+id/btnPostAd"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:background="@color/buttonBackground"
            android:textColor="@color/buttonText"
            android:text="@string/postANewAd"
            android:onClick="navigateToNewAdForm"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"/>

        <Button
            android:id="@+id/btnComposterNearBy"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:background="@color/buttonBackground"
            android:textColor="@color/buttonText"
            android:text="@string/composterNearBy"
            android:onClick="navigateToNewAdForm"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="5dp"/>
    </LinearLayout>

</LinearLayout>
