<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:layout_marginBottom="5dp"
        android:weightSum="10"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="59dp"
            android:text="@string/activeAds"
            android:textStyle="bold"
            android:background="@color/buttonBackground"
            android:textColor="@color/buttonText"
            android:gravity="center"
            android:textSize="18dp"
            />

        <Button
            android:id="@+id/btnComposterHistory"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="59dp"
            android:text="@string/residentHistory"
            android:background="@color/buttonBackground"
            android:textColor="@color/buttonText"
            android:gravity="center"
            android:textSize="16dp"
            />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/loadingPanel"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="100dp">

        <ProgressBar
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/buttonBackground"/>
    </RelativeLayout>

    <ListView
        android:id="@+id/composterItemListView"
        android:layout_width="wrap_content"
        android:layout_height="368dp"
        android:textAppearance="?attr/textAppearanceListItem"
        android:layout_marginLeft="20px"
        android:layout_marginRight="20px" />

    <TextView
        android:id="@+id/emptyAdListForComposter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:visibility="gone"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
        android:text="@string/noAds"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="10"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <Button
            android:id="@+id/btnBackResidentListView"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="Back"
            android:onClick="onBackCompostListView"
            android:textColor="@color/buttonText"
            android:background="@color/buttonBackground"
            android:layout_marginRight="50px"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnResidentNearBy"
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="50dp"
            android:background="@color/buttonBackground"
            android:textColor="@color/buttonText"
            android:text="SEE NEAR BY RESIDENT"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            />

    </LinearLayout>
</LinearLayout>
